Veetilk - 02.09.2020

1. Updated the program for the Retreat meeting event