@@ -7,6 +7,6 @@ categories: [upcoming]
 
 A Retreat & Networking Meeting of the DFG priority program SPP2137 (Skyrmionics) will be held on 3 & 4 September 2020. The retreat meeting will take place at the Physik-Zentrum in Bad Honnef. Arrival is possible on 2 September.
 
-[Preliminary program]({{ site.baseurl }}/assets/2020-09-01-SPP2137-retreat.pdf)
+[Program]({{ site.baseurl }}/assets/2020-09-01-SPP2137-retreat.pdf)
 
 Please contact [Christian Pfleiderer](mailto:christian.pfleiderer@tum.de) or [Lisa Seitz](mailto:sekretariat-e51@ph.tum.de) if you are interested in participating.
