@@ -13,7 +13,7 @@
 
 A Retreat &amp; Networking Meeting of the DFG priority program SPP2137 (Skyrmionics) will be held on 3 &amp; 4 September 2020. The retreat meeting will take place at the Physik-Zentrum in Bad Honnef. Arrival is possible on 2 September.
 
-Preliminary program
+Program
 
 Please contact Christian Pfleiderer or Lisa Seitz if you are interested in participating.
 " />
@@ -21,7 +21,7 @@ Please contact Christian Pfleiderer or Lisa Seitz if you are interested in parti
 
 A Retreat &amp; Networking Meeting of the DFG priority program SPP2137 (Skyrmionics) will be held on 3 &amp; 4 September 2020. The retreat meeting will take place at the Physik-Zentrum in Bad Honnef. Arrival is possible on 2 September.
 
-Preliminary program
+Program
 
 Please contact Christian Pfleiderer or Lisa Seitz if you are interested in participating.
 " />
@@ -78,7 +78,7 @@ Please contact Christian Pfleiderer or Lisa Seitz if you are interested in parti
 
 <p>A Retreat &amp; Networking Meeting of the DFG priority program SPP2137 (Skyrmionics) will be held on 3 &amp; 4 September 2020. The retreat meeting will take place at the Physik-Zentrum in Bad Honnef. Arrival is possible on 2 September.</p>
 
-<p><a href="/assets/2020-09-01-SPP2137-retreat.pdf">Preliminary program</a></p>
+<p><a href="/assets/2020-09-01-SPP2137-retreat.pdf">Program</a></p>
 
 <p>Please contact <a href="mailto:christian.pfleiderer@tum.de">Christian Pfleiderer</a> or <a href="mailto:sekretariat-e51@ph.tum.de">Lisa Seitz</a> if you are interested in participating.</p>
 
